arreglos en posicionamiento

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
     </ul>
     </div>
-    <div>
+    <div class="display_total">
         <h2>Precio Total:</h2>
         <p id="totalCarrito"></p>
     </div>
